--- a/views/movies.erb
+++ b/views/movies.erb
@@ -1,28 +1,32 @@
 <!doctype html>
-  <head>
-    <meta charset="utf-8">
-    <title>Movierama</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Movierama</title>
+</head>
 
 
-  <body>
-    <h1>Movie Database...Redux!!</h1>
-    <h2>Movies</h2>
+<body>
+  <h1>Movie Database...Redux!!</h1>
+  <h2>Movies</h2>
 
-    <!--TWO BIG BUTTONS  -->
+  <!--TWO BIG BUTTONS  -->
 
-    <a href="/movie_catalog">Home</a>
-    <a href="/movie_catalog/actors">Actors</a>
+  <a href="/movie_catalog">Home</a>
+  <a href="/movie_catalog/actors">Actors</a>
 
-    <div class = "actor_content">
-      <ul>
-        <% @movies.each do |movie| %>
-        <li><%= movie["title"] %></li>
-        <% end %>
-      </ul>
+  <div class = "actor_content">
+    <ul>
+      <% @movies.each do |movie| %>
+        <li>
+          <a href="/movie_catalog/movies/<%= movie["id"] %>">
+            <%= movie["title"] %>
+            </a>
+        </li>
+      <% end %>
+    </ul>
 
-    </div>
+  </div>
 
-  </body>
+</body>
 
 </html>
