--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,22 @@
+<p><img src="/img/videoedit.png"/></p>
 
-<h2>View info on:</h2>
+<div class="row">
 
-<!--TWO BIG BUTTONS  -->
+  <div class="large-8 columns">
+    <h2>Movies......REDUX!.</h2>
+    <p>You love movies. We love movies. That's why Movies Catalog Redux exists, to give you info on all the classics.... and all the crap. Shitty John Travolta flicks? Got em. 50 Cent? Yep, he's in here too. So click away and be kind..... PLEASE rewind.
 
-<a href="/movie_catalog/actors">Actors</a>
-<a href="/movie_catalog/movies">Movies</a>
+    <ul class = "button-group round even-3">
+      <li>
+        <a href="/movie_catalog/actors" class="button success">Actors</a>
+      </li>
+      <li>
+        <a href="#" class="button success">About</a>
+      </li>
+      <li>
+        <a href="/movie_catalog/movies" class="button success">Movies</a>
+      </li>
+    </ul>
+  </div>
+
+</div>
