--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,11 +2,10 @@
   <head>
     <meta charset="utf-8">
     <title>Movierama</title>
+    <link rel= "stylesheet" href= "/css/vendor/foundation.min.css">
   </head>
 
-
   <body>
-    <h1>Movie Database...Redux!!</h1>
 
     <%= yield %>
 
