Hardocded URL sorts by rating and year.

--- a/views/movies.erb
+++ b/views/movies.erb
@@ -17,8 +17,16 @@
   <thead>
     <tr>
       <th width="200">Title</th>
-      <th>Year</th>
-      <th width="150">Rating</th>
+      <th>
+        <a href = '/movie_catalog/sorted_by_year'>
+          Year
+        </a>
+      </th>
+      <th width="150">
+        <a href = '/movie_catalog/sorted_by_rating'>
+          Rating
+        </a>
+      </th>
       <th width="150">Genre</th>
       <th width="150">Studio</th>
 
@@ -47,21 +55,3 @@
     <% end %>
   </tbody>
 </table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <a href="/movie_catalog">Home</a>
-<a href="/movie_catalog/actors">Actors</a> -->
