Functioning order by rating, title, year links

--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
         <a href="#" class="button success">About</a>
       </li>
       <li>
-        <a href="/movie_catalog/movies" class="button success">Movies</a>
+        <a href="/movie_catalog/movies?order=title" class="button success">Movies</a>
       </li>
     </ul>
   </div>
