Pagination succesful with ugly links

--- a/views/actors.erb
+++ b/views/actors.erb
@@ -8,7 +8,7 @@
     <a href="/movie_catalog" class="button success">Home</a>
   </li>
   <li>
-    <a href="/movie_catalog/?order=title" class="button success">Movies</a>
+    <a href="/movie_catalog/?order=title&page=1" class="button success">Movies</a>
   </li>
 </ul>
 
