--- a/views/movies.erb
+++ b/views/movies.erb
@@ -8,7 +8,7 @@
     <a href="/movie_catalog" class="button success">Home</a>
   </li>
   <li>
-    <a href="/movie_catalog/movies?order=title" class="button success">Movies</a>
+    <a href="/movie_catalog/movies?order=title&page=1" class="button success">Movies</a>
   </li>
 </ul>
 
@@ -59,3 +59,11 @@
     <% end %>
   </tbody>
 </table>
+
+<a href = '/movie_catalog/movies?order=title&page=<%= @page + 1  %>'>
+  Next page
+</a>
+
+<a href = '/movie_catalog/movies?order=title&page=<%= @page - 1 %>'>
+  Prior page
+</a>
