Paginated actors data

--- a/views/movies.erb
+++ b/views/movies.erb
@@ -2,7 +2,7 @@
 
 <ul class = "button-group round even-3">
   <li>
-    <a href="/movie_catalog/actors" class="button success">Actors</a>
+    <a href="/movie_catalog/actors?page=1" class="button success">Actors</a>
   </li>
   <li>
     <a href="/movie_catalog" class="button success">Home</a>
