--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 
     <ul class = "button-group round even-3">
       <li>
-        <a href="/movie_catalog/actors" class="button success">Actors</a>
+        <a href="/movie_catalog/actors?page=1" class="button success">Actors</a>
       </li>
       <li>
         <a href="#" class="button success">About</a>
